--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.container {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +13,22 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* Tooltip */
+.partner .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #282c34;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  margin-left: 20px;
+  border: 1px solid #fff;
+  font-size: 13px;
+  padding: 4px;
+  position: absolute;
+  z-index: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.partner:hover .tooltiptext {
+  visibility: visible;
 }
